[package]
name = "mcr"
version = "0.1.0"
authors = ["Curtis Ruck <curtis@ruck.io>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
clokwerk = "0.2.2"
errno = "0.2.4"
hexdump = "0.1.0"
libc = "0.2.60"
log = "0.4.8"
nix = "0.14.1"
num = "0.2.0"
num-derive = "0.2.5"
num-traits = "0.2.8"
rust-ini = "0.13"
syslog = "4.0.1"
toml = "0.5.3"